--- a/package.json
+++ b/package.json
@@ -8,25 +8,25 @@
     "url": "https://github.com/innowatio/iwwa-lambda-sites-aggregator.git"
   },
   "dependencies": {
-    "babel": "^5.8.29",
     "bluebird": "^3.0.5",
-    "dotenv": "^1.2.0",
+    "dotenv": "^2.0.0",
     "kinesis-router": "^1.2.1",
-    "moment": "^2.10.6",
     "mongodb": "^2.0.48",
-    "ramda": "^0.18.0"
+    "ramda": "^0.21.0"
   },
   "devDependencies": {
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.29",
-    "babel-eslint": "^4.1.4",
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.6",
+    "babel-eslint": "^6.0.2",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "coveralls": "^2.11.4",
-    "eslint": "^1.9.0",
+    "eslint": "^2.7.0",
     "gulp": "^3.9.0",
-    "gulp-eslint": "^1.0.0",
-    "isparta": "^3.5.3",
+    "gulp-eslint": "^2.0.0",
+    "isparta": "^4.0.0",
     "lambda-deploy": "^2.1.0",
     "mocha": "^2.3.3",
     "sinon": "^1.17.2",
