--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
+    "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
     "babel-preset-es2015": "^6.6.0",
@@ -33,6 +34,7 @@
     "sinon-chai": "^2.8.0"
   },
   "scripts": {
+    "build": "babel src -d bundle",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "test": "gulp test",
     "lint": "gulp lint",
