--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "babel-cli": "^6.7.5",
     "babel-core": "^6.7.6",
     "babel-eslint": "^6.0.2",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.7.2",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.1.0",
     "coveralls": "^2.11.4",
@@ -35,11 +37,12 @@
   },
   "scripts": {
     "build": "babel src -d bundle",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "gulp test",
-    "lint": "gulp lint",
+    "codecov": "codecov",
+    "coverage": "NODE_ENV=test NODE_PATH=src babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
     "deploy": "gulp deploy",
-    "dev": "gulp"
+    "dev": "npm test -- --watch",
+    "lint": "eslint src test",
+    "test": "NODE_PATH=src NODE_ENV=test mocha --compilers js:babel-register --recursive --require babel-polyfill"
   },
   "author": "Team Wattellina <wattellina@mondora.com>",
   "license": "Apache-2.0"
