--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ env:
   - MONGODB_URL=mongodb://localhost:27017/test
 
 script:
-  - npm test
-  - npm run coveralls
   - npm run lint
-  - npm run deploy
+  - npm run coverage
+  - npm run codecov
