Updated event structure

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "deploy": "gulp deploy",
     "dev": "npm test -- --watch",
     "lint": "eslint src test",
-    "test": "NODE_PATH=src NODE_ENV=test mocha --compilers js:babel-register --recursive --require babel-polyfill"
+    "test": "NODE_PATH=src NODE_ENV=test mocha --compilers js:babel-register --recursive"
   },
   "author": "Team Wattellina <wattellina@mondora.com>",
   "license": "Apache-2.0"
