--- a/package.json
+++ b/package.json
@@ -13,33 +13,25 @@
     "dotenv": "^2.0.0",
     "kinesis-router": "^1.2.1",
     "mongodb": "^2.1.20",
-    "ramda": "^0.21.0"
+    "ramda": "^0.22.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.0.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
     "codecov": "^1.0.1",
-    "eslint": "^2.11.0",
-    "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
+    "eslint": "^3.8.1",
     "isparta": "^4.0.0",
-    "lambda-deploy": "^2.1.0",
-    "mocha": "^2.5.3",
-    "sinon": "^1.17.4",
-    "sinon-chai": "^2.8.0"
+    "mocha": "^3.1.2"
   },
   "scripts": {
     "build": "babel src -d bundle",
     "codecov": "codecov",
     "coverage": "NODE_ENV=test NODE_PATH=src babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
-    "deploy": "gulp deploy",
     "dev": "npm test -- --watch",
     "lint": "eslint src test",
     "test": "NODE_PATH=src NODE_ENV=test mocha --compilers js:babel-register --recursive"
